- Small fix for when you save an item selection page without items selected
git-svn-id: https://plugins.svn.wordpress.org/tradetracker-store/trunk@1156956 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/translation/ttstore-nl_NL.po
+++ b/translation/ttstore-nl_NL.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TTstore\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-04-19 09:19-0000\n"
-"PO-Revision-Date: 2015-04-19 09:19-0000\n"
+"POT-Creation-Date: 2015-04-29 21:25-0000\n"
+"PO-Revision-Date: 2015-04-29 21:25-0000\n"
 "Last-Translator: Robert <info@wpaffiliatefeed.com>\n"
 "Language-Team: \n"
 "Language: nl\n"
@@ -170,12 +170,17 @@ msgid "or"
 msgstr "of"
 
 #: ../debug.php:336
+#, fuzzy
 msgid ""
 "<strong>The following XML splits gave an error or were empty during the last "
-"import. So they are possibly not imported.</strong>"
+"import. So they are possibly not imported. More information about this can "
+"be found <a href=\"http://wpaffiliatefeed.com/624/frequently-asked-questions/"
+"my-import-gives-an-error/\">here</a> </strong>"
 msgstr ""
 "<strong>De volgende XML delen gaven een foutmelding of waren leeg tijdens de "
-"laatste import. Mogelijk zijn er geen items van geimporteerd</strong>"
+"laatste import. Mogelijk zijn er geen items van geimporteerd. Meer "
+"informatie kan je <a href=\"http://wpaffiliatefeed.com/624/frequently-asked-"
+"questions/my-import-gives-an-error/\">hier</a> vinden</strong>"
 
 #: ../debug.php:366
 msgid ""
