--- a/translation/default.po
+++ b/translation/default.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TTstore\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-04-19 09:18-0000\n"
-"PO-Revision-Date: 2015-04-19 09:18-0000\n"
+"POT-Creation-Date: 2015-04-29 21:25-0000\n"
+"PO-Revision-Date: 2015-04-29 21:25-0000\n"
 "Last-Translator: Robert <info@wpaffiliatefeed.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -166,7 +166,9 @@ msgstr ""
 #: ../debug.php:336
 msgid ""
 "<strong>The following XML splits gave an error or were empty during the last "
-"import. So they are possibly not imported.</strong>"
+"import. So they are possibly not imported. More information about this can "
+"be found <a href=\"http://wpaffiliatefeed.com/624/frequently-asked-questions/"
+"my-import-gives-an-error/\">here</a> </strong>"
 msgstr ""
 
 #: ../debug.php:366
